immunity (0.2) UNRELEASED; urgency=low

  * Use a private namespace.
  * Unmount most filesystems.
  * Secure other filesystems (/tmp, /var/tmp, /dev).
  * Allow executing user specified command.
  * Change default command to /bin/sh.
  * Add capability support.

 -- Torsten Werner <twerner@debian.org>  Sun, 15 Mar 2009 13:36:27 +0100

immunity (0.1) experimental; urgency=low

  * initial release

 -- Torsten Werner <twerner@debian.org>  Sun, 01 Mar 2009 23:00:46 +0100