@@ -6,8 +6,9 @@ immunity (0.2) UNRELEASED; urgency=low
   * Allow executing user specified command.
   * Change default command to /bin/sh.
   * Add capability support.
+  * Drop most capabilities early.
 
- -- Torsten Werner <twerner@debian.org>  Sun, 15 Mar 2009 13:36:27 +0100
+ -- Torsten Werner <twerner@debian.org>  Sun, 15 Mar 2009 13:41:07 +0100
 
 immunity (0.1) experimental; urgency=low
 
